tests/specs/ecosystem/klexik/fastify_oas_connector/1_1_5.test
klexik/fastify-oas-connector/1.1.5
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/defaultOperationHandler.ts:8:14
  | 
8 | export const defaultHandler = async (req: FastifyRequest, rep: FastifyReply) => {
  |              ^^^^^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: async functions without a return statement can have a return type of either 'Promise<void>' or 'Promise<never>'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


